--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/responsive_overrides.css') }}">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - PureFyul</title>
   <style>
