--- a/templates/index_docs.html
+++ b/templates/index_docs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nutrition & Allergen API</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/feedback.css') }}">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -101,5 +102,7 @@
             <p>API Version: 1.0</p>
         </div>
     </div>
+    {% include "_feedback.html" %}
+    <script src="{{ url_for('static', filename='js/feedback.js') }}" defer></script>
 </body>
 </html>
