--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/responsive_overrides.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/feedback.css') }}">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - PureFyul</title>
@@ -282,5 +283,7 @@
     </div>
     </div>
   </div>
+  {% include "_feedback.html" %}
+  <script src="{{ url_for('static', filename='js/feedback.js') }}" defer></script>
 </body>
 </html>
